[package]
edition = "2021"
name = "arpchat"
version = "1.0.0"

[dependencies]
crossbeam-channel = "0.5.4"
cursive = { version = "0.17.0", default_features = false, features = ["toml", "crossterm-backend"] }
directories = "4.0.1"
gethostname = "0.2.3"
pnet = "0.29.0"
rand = "0.8.5"
smaz = "0.1.0"
toml = "0.5.8"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
once_cell = "1.10.0"
simplelog = "0.11.2"
log = "0.4.16"