[package]
edition = "2021"
name = "arpchat"
version = "1.0.0"

[dependencies]
crossbeam-channel = "0.5.8"
cursive = { version = "0.17.0", default_features = false, features = ["toml", "crossterm-backend"] }
directories = "5.0.1"
gethostname = "0.4.3"
pnet = "0.34.0"
rand = "0.8.5"
smaz = "0.1.0"
toml = "0.7.6"
serde = { version = "1.0.183", features = ["derive"] }
thiserror = "1.0.44"
once_cell = "1.18.0"
chrono = "0.4.26"
